# test-release-tools

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Pipfile  README.md  setup.cfg  setup_bdist_msi.py  tox.ini  yabs.yaml
docs/sphinx/: conf.py  index.md  requirements.txt
src/test_release_tool/: __init__.py  __init__.py.bak  main.py
src/yabs_test/: __init__.py
tests/: test_basic.py
yabs_test/: __init__.py
