[bdist_wheel]
universal = 1

[metadata]
name = test-release-tool
version = attr: test_release_tool.__version__
author = Martin Wendt
author_email = yabs@wwwendt.de
maintainer = Martin Wendt
maintainer_email = yabs@wwwendt.de
url = https://github.com/mar10/yabs/
# download_url =
description = Test for mar10/yabs
long_description = file: README.md
long_description_content_type = text/markdown
keywords = test, tenporary, setup
license = MIT
license_file = LICENSE
# project_urls	 	dict	38.3.0
# platforms 	list-comma
# provides	 	list-comma
# requires	 	list-comma
# obsoletes	 	list-comma
classifiers =
    # "Development Status :: 3 - Alpha",
    Development Status :: 4 - Beta
    # "Development Status :: 5 - Production/Stable",
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Traffic Generation

[options]
zip_safe = False
package_dir =
    =src
packages = find:

# scripts =
#   bin/first.py
#   bin/second.py
install_requires =
    # black
    # requests
    # importlib; python_version == "2.6"

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where = src
include_package_data = True
exclude =
    src.test

# [options.data_files]
# /etc/my_package =
#     site.d/00_default.conf
#     host.d/00_default.conf
# data = data/img/logo.png, data/svg/icon.svg

[options.entry_points]
console_scripts =
    test_rt = test_release_tool.main:run
