[bdist_wheel]
# set universal = 1 if Python 2 and 3 are supported
;universal = 1

[metadata]
# name = yabs-test  # GitHub dependants needs it in setup.py?
version = attr: yabs_test.__version__
author = Martin Wendt
author_email = yabs@wwwendt.de
maintainer = Martin Wendt
maintainer_email = yabs@wwwendt.de
url = https://github.com/mar10/yabs-test
description = Dummy application to release workflows with mar10/yabs
long_description = file: README.md
long_description_content_type = text/markdown
keywords = test, temporary, setup, yabs
license = MIT
license_files = LICENSE.txt
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing

[options]
zip_safe = False
# package_dir =
#     = src
packages = find:

# scripts =
#   bin/first.py
#   bin/second.py
install_requires =
    # black
    # requests
    # importlib; python_version == "2.6"

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
# where = src
include_package_data = True
exclude =
    test
    # src.test

# [options.data_files]
# /etc/my_package =
#     site.d/00_default.conf
#     host.d/00_default.conf
# data = data/img/logo.png, data/svg/icon.svg

[options.entry_points]
console_scripts =
    yabs_test = yabs_test.cli:run
